# quant_framework_research

./: .dockerignore  .env.example  .gitignore  =1.10  =2.0  =2.8  ANALYSE_STRATEGIE_DEVELOPPEMENT.md  AdaptiveMeanReversion_Scientific_Report_20250929_141717.html  AdaptiveMeanReversion_Scientific_Report_20250929_141717.md  AdaptiveMeanReversion_Scientific_Report_20250929_142010.html  AdaptiveMeanReversion_Scientific_Report_20250929_142010.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  COMPLETED_TASKS.md  CONTRIBUTING.md  CORRECTIONS_2025-09-27.md  DATA_INTEGRITY_VALIDATION_REPORT.md  DEPLOYMENT_STATUS.md  DOCS_README.md  Dockerfile  Dockerfile.research  Dockerfile.ui  FRAMEWORK_COMPLETION_REPORT.md  FRAMEWORK_VALIDATION_COMPLETE.md  FUNCTIONAL_AUDIT_REPORT.md  GETTING_STARTED.md  GUIDE_VERIFICATION_TESTS.md  IMPACT_TOTAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_AUDIT.md  INSTALL_TALIB.md  LICENSE  Makefile  NEXT_PHASES_ROADMAP.md  NEXT_STEPS_ROADMAP.md  OPTION_A_FINAL_REPORT.md  PHASE5_INTEGRATION_REPORT.md  PHASE7_RESEARCH_PLATFORM_VALIDATION_REPORT.md  POETRY_GUIDE.md  (+57 more)
.claude-flows/: qframe-flow-config.yaml  quant-trading-flow.yaml
.claude-flows/agents/: data-science-specialists.yaml  quant-sparc-specialist.yaml  quant-swarm-coordinator.yaml
.claude-flows/templates/: qframe-strategy-template.yaml
.claude/agents/: documentation-maintainer.md  quant-web-researcher.md  test-generator.md
.github/workflows/: ci.yml  tests.yml
artifacts/: .gitkeep
backtests/: adaptive_mean_reversion_backtest.py
config/: README.md  base.yml  development.yml  feature_flags.yml  production.yml  secrets.yml  small_capital.yml  testing.yml
data/: .gitkeep
docs/: API_DOCUMENTATION.md  API_EXAMPLES.md  DEPLOYMENT.md  QUICKSTART.md  README.md  adaptive_mean_reversion_documentation.md  api_schema.json  diagnostic.md  index.md
docs/architecture/: configuration.md  di-container.md  interfaces.md  overview.md
docs/coverage/: index.md
docs/development/: contributing.md
docs/examples/: index.md
docs/features/: processors.md  symbolic-operators.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/performance/: benchmarks.json  benchmarks.md
docs/portfolio/: management.md
docs/reference/: index.md
docs/research/: overview.md
docs/scripts/: advanced_macros.py  ai_assistant.py  architecture_visualizer.py  gen_api_docs.py  gen_benchmarks.py  gen_coverage.py  gen_ref_pages.py  intelligent_diagnostics.py  macros.py
docs/strategies/: dmn-lstm.md  funding-arbitrage.md  index.md  mean-reversion.md  rl-alpha.md
docs/ui/: dashboard.md
examples/: backtest_example.py  backtest_real_data.py  ccxt_exchanges_test.py  ccxt_framework_integration.py  cqrs_foundation_test.py  enhanced_example.py  institutional_metrics_test.py  institutional_validation_test.py  minimal_example.py  multi_strategy_orchestration_test.py  order_execution_test.py  phase6_production_infrastructure_test.py  portfolio_engine_test.py  research_platform_integration_demo.py  strategy_runtime_test.py
examples/strategies/: ma_crossover_strategy.py
k8s/: README.md  configmap.yaml  ingress.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  postgres.yaml  production-patches.yaml  qframe-api.yaml  qframe-ui.yaml  redis.yaml  storage.yaml
mlpipeline/: __init__.py
mlpipeline/alphas/: __init__.py  alpha_factory.py  dmn_model.py  funding_strategy.py  mean_reversion.py  rl_alpha_generator.py  rl_alpha_pipeline.py  synergistic_combiner.py
mlpipeline/backtesting/: __init__.py  engine.py
mlpipeline/data_sources/: crypto_fetcher.py
mlpipeline/execution/: event_engine.py
mlpipeline/export/: features_exporter.py
mlpipeline/features/: __init__.py  feature_engineer.py  symbolic_operators.py
mlpipeline/monitoring/: __init__.py  alerting.py  portfolio_monitor.py
mlpipeline/portfolio/: __init__.py  optimizer.py
mlpipeline/reporting/: consolidated_reporter.py
mlpipeline/scoring/: ml_exporter.py
mlpipeline/selection/: psr_selector.py  regime_detector.py
mlpipeline/utils/: __init__.py  artifact_cleaner.py  async_data.py  crypto_selector.py  realistic_costs.py  risk_metrics.py  workflow_optimizer.py
mlpipeline/validation/: oos_validator.py  overfitting_detector.py  rigorous_backtester.py  robustness_metrics.py  unified_walk_forward.py  walk_forward_analyzer.py
monitoring/: grafana-dashboards.json  prometheus.dev.yml  prometheus.yml  qframe_alerts.yml
monitoring/grafana/: qframe-dashboard.json
notebooks/: qframe_research_starter.ipynb
orchestration/: async_master_pipeline.py  benchmark_async_vs_sync.py  hybrid_async_pipeline.py  hybrid_no_mlflow_pipeline.py  master_pipeline.py  performance_optimizer.py  smart_cache.py
qframe/: __init__.py
qframe/api/: __init__.py  main.py  services_registration.py
qframe/apps/: cli.py
qframe/core/: __init__.py  config.py  container.py  container_enterprise.py  interfaces.py  parallel_processor.py  parallel_processor_fixed.py
qframe/data/: validation.py  validation_simple.py
qframe/ecosystem/: __init__.py  apis.py  community.py  documentation.py  marketplace.py  plugins.py
qframe/examples/: config_usage_example.py  di_usage_example.py
qframe/features/: __init__.py  symbolic_operators.py
qframe/research/: __init__.py  integration_layer.py
qframe/strategies/: __init__.py
qframe/ui/: CORRECTION.md  GUIDE_UTILISATION.md  PHASE1_DEPLOYMENT_GUIDE.md  PHASE2_COMPLETION_SUMMARY.md  PHASE2_PLAN.md  README.md  check-status.sh  demo.sh  deploy-simple.sh  deploy.sh  docker-compose.local.yml  docker-compose.simple.yml  docker-compose.yml  nginx.conf  test_gui.sh  test_research_interface.py  (+2 more)
scripts/: README.md  deploy.sh  run_tests.py  serve-docs.sh  setup-professional-docs.sh  validate_data_integrity.py  validate_installation.py
tests/: README.md  __init__.py  conftest.py  pytest.ini  test_adaptive_mean_reversion.py  test_async_architecture.py  test_full_integration.py  test_institutional_metrics.py  test_organization.py  test_rl_alpha_system.py  test_symbolic_integration.py  test_unified_walkforward.py
(+513 files in other folders)
