[tool.poetry]
name = "qframe"
version = "0.1.0"
description = "Framework Quantitatif Professionnel - Recherche et Production"
authors = ["Quantitative Research Team <research@qframe.dev>"]
readme = "README.md"
packages = [{include = "qframe"}]
homepage = "https://github.com/1BoNoBo1/quant_framework_research"
repository = "https://github.com/1BoNoBo1/quant_framework_research"
documentation = "https://qframe.readthedocs.io"
keywords = ["quantitative", "trading", "finance", "machine-learning", "crypto"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

[tool.poetry.dependencies]
python = "^3.11"
# Core dependencies
pandas = "^2.1.0"
numpy = "^1.25.0"
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"
typer = "^0.9.0"
rich = "^13.6.0"
structlog = "^23.2.0"

# Async and performance
asyncio = "*"
aiohttp = "^3.9.0"
aiofiles = "^23.2.1"

# Machine Learning & Scientific Computing
torch = "^2.1.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.0"

# Financial & Technical Analysis
ta-lib = "^0.4.28"
ccxt = "^4.1.0"
python-binance = "^1.0.19"

# Data Storage & Caching
redis = "^5.0.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"

# Visualization
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
plotly = "^5.17.0"

# MLOps & Experiment Tracking
mlflow = "^2.8.0"

# Configuration & Environment
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
hypothesis = "^6.88.0"

# Code Quality
black = "^23.9.0"
ruff = "^0.1.0"
mypy = "^1.6.0"
pre-commit = "^3.5.0"

# Documentation
sphinx = "^7.2.0"
sphinx-rtd-theme = "^1.3.0"
myst-parser = "^2.0.0"

# Development Tools
ipython = "^8.16.0"
jupyter = "^1.0.0"
notebook = "^7.0.0"

[tool.poetry.group.production.dependencies]
# Production monitoring & deployment
gunicorn = "^21.2.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
fastapi = "^0.104.0"
prometheus-client = "^0.18.0"

[tool.poetry.scripts]
qframe = "qframe.apps.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ================================
# TOOLS CONFIGURATION
# ================================

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

# Third party libraries without types
[[tool.mypy.overrides]]
module = [
    "ccxt.*",
    "binance.*",
    "ta.*",
    "mlflow.*",
    "redis.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["qframe"]
omit = [
    "tests/*",
    "qframe/apps/*",  # CLI apps
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2
skip_covered = false